--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,32 @@
 .container {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
 }
+
+@media screen and (min-width: 480px) {
+    .container {
+        width: 450px;
+        padding-left: auto;
+        padding-right: auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
+
+// .container {
+//     width: 1200px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     padding-left: 15px;
+//     padding-right: 15px;
+// }
