--- a/css/main.css
+++ b/css/main.css
@@ -491,11 +491,6 @@ li {
   justify-content: space-between;
 }
 
-.page-header {
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
 .header-studio {
   font-size: 26px;
   line-height: 1.2;
@@ -512,6 +507,142 @@ li {
   color: var(--accent-color);
 }
 
+.menu__link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--main-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+}
+
+.link.menu__link {
+  position: relative;
+  display: inline-block;
+  transition: color var(--trnsition-dur-and-func);
+}
+
+.current-studio {
+  color: var(--accent-color);
+}
+.current-studio::after {
+  position: absolute;
+  content: "";
+  display: block;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+
+.header-contact {
+  display: none;
+}
+
+.page-header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.page-header {
+  border-bottom: 1px solid #ECECEC;
+  background-color: var(--main-light-color);
+}
+
+.page-navigation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  .page-header__container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .page-header {
+    padding-top: 10px;
+    padding-bottom: 9px;
+  }
+  .open-mobile-menu-btn {
+    background-color: transparent;
+    line-height: 0;
+    border: 0;
+    padding: 0;
+    margin: 0;
+  }
+  .open-mobile-menu-btn-icon {
+    width: 40px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .open-mobile-menu-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+  .menu {
+    display: flex;
+    column-gap: 50px;
+  }
+  .page-header__container {
+    display: flex;
+    align-items: center;
+  }
+  .header-contact {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    margin-left: auto;
+  }
+  .header__list_width-email {
+    width: 138px;
+  }
+  .header__list_width-tell {
+    width: 123px;
+  }
+  .link.header__link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--secondary-color);
+    fill: currentColor;
+    transition: color var(--trnsition-dur-and-func);
+  }
+  .link.header__link:hover, .link.header__link:focus {
+    color: var(--accent-color);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contact {
+    display: flex;
+    flex-direction: row;
+    column-gap: 30px;
+  }
+  .header__list_width-email {
+    width: 161px;
+  }
+  .header__list_width-tell {
+    width: 142px;
+  }
+  .link.header__link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1;
+    padding: 32px 0;
+  }
+}
 .hero-box__title {
   margin-bottom: 30px;
   font-weight: 900;
