added corrections hw8

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import './components/mobile-menu';
 @import './components/current';
 @import './components/button-submit';
+@import './components/footer';
 @import './components/subscription-form';
 @import './components/backdrop';
 @import './components/modal-window';
@@ -19,8 +20,6 @@
 
 
 
-@import './layout/footer';
-@import './layout/header';
 @import './layout/hero';
 @import './layout/features';
 @import './layout/directions';
