--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -28,8 +28,8 @@
 .page-footer__address-link {
     font-style: normal;
     font-weight: 400;
-        font-size: 14px;
-        line-height: 1.7;
+    font-size: 14px;
+    line-height: 1.7;
     color: var(--primary-page-color);
 
     transition: color var(--transition-time-end-timing);
@@ -43,8 +43,8 @@
 .page-footer__contacts {
     font-style: normal;
     font-weight: 400;
-        font-size: 14px;
-        line-height: 1.7;
+    font-size: 14px;
+    line-height: 1.7;
     text-align: center;
     color: var(--translucent-page-color);
 
@@ -58,8 +58,8 @@
 
 .page-footer__label {
     font-weight: 700;
-        font-size: 14px;
-        line-height: 1.1;
+    font-size: 14px;
+    line-height: 1.1;
     text-transform: uppercase;
     text-align: center;
     color: var(--primary-page-color);
@@ -79,6 +79,8 @@
 
 .page-footer__social-links {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
     color: var(--primary-page-color);
