--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -21,6 +21,8 @@
 
 .customers__link {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
 
