--- a/sass/layout/_directions.scss
+++ b/sass/layout/_directions.scss
@@ -32,6 +32,8 @@
     bottom: 0;
 
     display: flex;
+        justify-content: center;
+        align-items: center;
     width: 100%;
     height: 70px;
 
