--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,5 +1,7 @@
 .features__thumb {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 120px;
     margin-bottom: 30px;
