--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -15,7 +15,6 @@
 @import './components/filter-buttons';
 @import './components/subscription-form';
 @import './components/button-submit';
+@import './components/footer';
 
 @import './layout/portfolio-projects';
-@import './layout/footer';
-@import './layout/header'
