--- a/css/main.css
+++ b/css/main.css
@@ -679,6 +679,8 @@ button {
   top: 8px;
   right: 8px;
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 30px;
   height: 30px;
   padding: 0;
