--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -23,6 +23,8 @@
     right: 8px;
 
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 30px;
     height: 30px;
     padding: 0;
