--- a/css/main.css
+++ b/css/main.css
@@ -1126,6 +1126,8 @@ button {
 
 .team__social-links {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   border-radius: 50%;
