--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -65,6 +65,8 @@
 
 .team__social-links {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
 
